--- a/assets/style.css
+++ b/assets/style.css
@@ -25,16 +25,27 @@ th {
     visibility: hidden;
 }
 
+#goal-section button {
+    height: 2.5em;
+    width: 5em;
+}
+
+#goal-input {
+    width: 5em;
+    margin-right: 1em;
+}
+
 #search-list {
     position: absolute;
     left: 30px;
+    width: 1600px;
     margin-left: 1em !important;
     z-index: 10;
 }
 
 #search-section {
     margin-left: 2em;
-    font-size: 1.5em;
+    font-size: 1.2em;
 }
 
 #search-list tr {
@@ -47,7 +58,10 @@ th {
     margin-left: 2em;
 }
 
-.serving-size {}
+.serving-size {
+    margin-right: 2em;
+    padding: 1em 1em;
+}
 
 .serving-unit {
     margin-left: 0.1em;
@@ -111,4 +125,10 @@ td:hover #edit-icon {
     #search-list {
         font-size: 0.8em;
     }
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
